CHANGES
=======

4.0.0 (unreleased)
------------------

- Dropped support for Python 2.4 and 2.5.


3.4.1 (2011-11-29)
------------------

- Added test cases from LP #139360 (all passed without modification to
  the ``parse`` function).
- Remove unneeded ``zope.testing`` dependency.

3.4.0 (2007-07-20)
------------------

- Initial release as a separate project.